--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,10 @@
 ---
 layout: default
 ---
-{% include JB/setup %}
-{% include themes/bootstrap/page.html %}
+
+<div class="page">
+  <h1 class="page-title">{{ page.title }}</h1>
+  {{ content }}
+</div>
+
+<div class="container">    <script data-isso="//comments.privacysolutions.no/"        src="//comments.privacysolutions.no/js/embed.min.js"></script>    <section id="isso-thread"></section>  </div>
