Removed items automatically from 3rd party site and paths

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,4 +7,4 @@ layout: default
   {{ content }}
 </div>
 
-<div class="container">    <script data-isso="//comments.privacysolutions.no/"        src="//comments.privacysolutions.no/js/embed.min.js"></script>    <section id="isso-thread"></section>  </div>
+<div class="container"><script data-isso="https://comments.privacysolutions.no/" src="https://comments.privacysolutions.no/js/embed.min.js"></script><section id="isso-thread"></section>  </div>
