--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
-<div class="container">    <script data-isso="//comments.privacysolutions.no/"        src="//comments.privacysolutions.no/js/embed.min.js"></script>    <section id="isso-thread"></section>  </div>
+<div class="container"><script data-isso="https://comments.privacysolutions.no/" src="https://comments.privacysolutions.no/js/embed.min.js"></script><section id="isso-thread"></section>  </div>
 
 <div class="related">
   <h2>Related Posts</h2>
